Добавлено удаление объектов. Сделан кустарник. Впереди деревья.